<resources>
    <string name="app_name">NoteManagerApp</string>
    <string name="login_title">Already have an account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_remember_me">Remember me</string>
    <string name="hint_sign_in">Sign In</string>
    <string name="hint_exit">Exit</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_fist_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="email_pattern">[a-zA-Z][\\w-]+@([\\w]+\\.[\\w]+|[\\w]+\\.[\\w]{2,}\\.[\\w]{2,})
    </string>
    <string name="require">REQUIRE</string>
    <string name="email_format">Invalid email</string>
    <string name="password_error">Incorrect password</string>
    <string name="account_not_found">Account not found</string>
    <string name="email_not_found">Email not found</string>
    <string name="email_error">Email are not right</string>
    <string name="email_exists">Email exists</string>
    <string name="login_successfully">Login successfully</string>
    <string name="name_exists">Name exists</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="menu_account">Account</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_change_password">Change Password</string>

    <string name="edit_category_dialog">Edit Category</string>
    <string name="edit_priority_dialog">Edit Priority</string>
    <string name="edit_status_dialog">Edit Status</string>
    <string name="add_category_dialog">Add Category</string>
    <string name="add_priority_dialog">Add Priority</string>
    <string name="add_status_dialog">Add Status</string>
    <string name="title_dialog">Confirm</string>
    <string name="massage_dialog">Are you sure</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="check_edit">checkEdit</string>
    <string name="name_category">nameCategory</string>
    <string name="name_priority">namePriority</string>
    <string name="name_status">nameStatus</string>
    <string name="name_note">nameNote</string>
    <string name="plan_date">planDate</string>

    <string name="delete_successfully">Delete successfully</string>
    <string name="add_successfully">Add successfully</string>
    <string name="edit_successfully">Edit successfully</string>
    <string name="edit_profile_successfully">Edit profile successfully</string>
    <string name="change_password_successfully">Change password successfully</string>
    <string name="delete_error">Cannot delete</string>
    <string name="add_error">Cannot add</string>
    <string name="edit_error">Cannot edit</string>
    <string name="edit_profile_error">Cannot edit profile</string>
    <string name="change_password_error">Cannot change password</string>

</resources>