<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_round_boder"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_note_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_note_tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_note_tv_name"
            android:layout_marginTop="10dp"
            android:text="@string/menu_category"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_note_tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_note_tv_category"
            android:layout_marginTop="10dp"
            android:text="@string/menu_priority"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_note_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_note_tv_priority"
            android:layout_marginTop="10dp"
            android:text="@string/menu_status"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_note_tv_plane_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_note_tv_status"
            android:layout_marginTop="10dp"
            android:text="@string/plan_date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_note_tv_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_note_tv_plane_date"
            android:layout_marginTop="10dp"
            android:text="@string/created_date"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>