<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.EditProfileFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_til_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_person_24"
            app:startIconTint="@color/primary"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_edit_profile_et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/hint_fist_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_til_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_person_24"
            app:startIconTint="@color/primary"
            app:endIconMode="clear_text">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_edit_profile_et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_email_24"
            app:startIconTint="@color/primary"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_edit_profile_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_til_new_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            app:startIconDrawable="@drawable/ic_email_24"
            app:startIconTint="@color/primary"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_edit_profile_et_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_email"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_edit_profile_btn_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_round_boder"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fragment_edit_profile_btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_round_boder"
            android:text="@string/menu_home"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>